fixed up the styling to make the site responsive. might need to work on the grid layout of the container as the ul for the list items seems to be taking up the entire space no matter how many todos are in it. will be working on the functionallity of the dark mode theme toggle next.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import "./config.scss";
+@import "./_config.scss";
 
 * {
   margin: 0;
@@ -39,7 +39,7 @@ body {
     background-position: top;
   }
 
-  .main {
+  .container {
     width: 90%;
     max-height: auto;
     display: grid;
@@ -142,3 +142,5 @@ body {
     }
   }
 }
+
+@import "./_queries.scss";
